@@ -21,6 +21,10 @@ Romain Moret
   Jackdmp changes log
 ---------------------------
 
+2008-06-08 Stephane Letz  <letz@grame.fr>
+
+	* Add a missing EXPORT for JackException class. 
+
 2008-06-06 Stephane Letz  <letz@grame.fr>
 
 	* Better error checking in JackGraphManager::RemoveAllPorts.
